logs/dag_id=user_table/run_id=manual__2022-06-15T09:30:34.689320+00:00/task_id=create_table/attempt=4.log
[2022-06-15 09:50:07,563] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:50:07,589] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:50:07,592] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:50:07,594] {taskinstance.py:1357} INFO - Starting attempt 4 of 4
[2022-06-15 09:50:07,595] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:50:07,624] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 09:30:34.689320+00:00
[2022-06-15 09:50:07,637] {standard_task_runner.py:52} INFO - Started process 11267 to run task
[2022-06-15 09:50:07,643] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_table', 'create_table', 'manual__2022-06-15T09:30:34.689320+00:00', '--job-id', '98', '--raw', '--subdir', 'DAGS_FOLDER/user.py', '--cfg-path', '/tmp/tmpsg9b0662', '--error-file', '/tmp/tmpxkd9280f']
[2022-06-15 09:50:07,646] {standard_task_runner.py:80} INFO - Job 98: Subtask create_table
[2022-06-15 09:50:08,005] {task_command.py:370} INFO - Running <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [running]> on host cfddca254c64
[2022-06-15 09:50:08,282] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_table
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T09:30:34.689320+00:00
AIRFLOW_CTX_TRY_NUMBER=4
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T09:30:34.689320+00:00
[2022-06-15 09:50:08,303] {base.py:68} INFO - Using connection ID 'testing' for task execution.
[2022-06-15 09:50:08,325] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email NOT NULL TEXT PRIMARY KEY,
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 09:50:08,339] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 6:             email NOT NULL TEXT PRIMARY KEY,
                          ^

[2022-06-15 09:50:08,359] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=user_table, task_id=create_table, execution_date=20220615T093034, start_date=20220615T095007, end_date=20220615T095008
[2022-06-15 09:50:08,391] {standard_task_runner.py:97} ERROR - Failed to execute job 98 for task create_table (syntax error at or near "NOT"
LINE 6:             email NOT NULL TEXT PRIMARY KEY,
                          ^
; 11267)
[2022-06-15 09:50:08,449] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 09:50:08,501] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
